--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "nodemailer": "^6.7.5",
     "pdfkit": "^0.13.0"
   }
