--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
 services:
   backend:
+    image: ghcr.io/testausserveri/soulcaptcha/backend
     build: backend/
     restart: unless-stopped
     env_file:
       - .env
   frontend:
+    image: ghcr.io/testausserveri/soulcaptcha/frontend
     build: frontend/
     restart: unless-stopped
     ports:
-      - 83:80
+      - 80:80
   
